<resources>
    <string name="app_name">FitB</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="check_calorie">Track Calorie</string>
    <string name="My_account">My Account</string>
    <string name="about">About</string>
    <string name="select_exercise_prompt">select</string>
    <string name="about_title">About FitB App</string>
    <string name="about_description">
        Welcome to the FitB Exercise App! This app helps it\'s users to check for exercises with a gif representing on how to perform it in action. Also the exercises can be filtered based on body parts, targets and equipments. This app also helps you track your workouts and calculate calories burned during exercises.
        Stay healthy and fit with our comprehensive exercise tracking features.
    </string>
    <string name="title_activity_bottom_navi">BottomNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Exercise">Exercise</string>
    <string name="Chats">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friendRequests">Friend Requests</string>
    <string name="findFriends">Find Friends</string>
    <string name="EditProfile">Update Profile</string>
    <string-array name="goal_options">
        <item>Gain Weight/Muscle</item>
        <item>Lose Weight/Fat</item>
        <item>Toning (Look good naked)</item>
        <item>Increase Flexibility</item>
        <item>Improve endurance</item>
    </string-array>
</resources>