<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_myaccount"
        android:title="@string/My_account"
        app:showAsAction="never">

    </item>

    <item android:id="@+id/menu_calorieCount"
        android:title="@string/check_calorie"
        app:showAsAction="never">

    </item>

    <item android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never">

    </item>


    <item android:id="@+id/menu_friendRequests"
        android:title="@string/friendRequests"
        app:showAsAction="never">

    </item>


    <item android:id="@+id/menu_findFriends"
        android:title="@string/findFriends"
        app:showAsAction="never">

    </item>
    <item android:id="@+id/menu_editProile"
        android:title="@string/EditProfile"
        app:showAsAction="never">

    </item>
</menu>